--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -5,6 +6,7 @@
         <title>Quizz de l'application de l'académie</title>
     </head>
     <body>
+
         {% if not user.is_authenticated %}
 
         <a href="{% url 'signup' %}">S'inscrire</a>
