--- a/app/accounts/templates/accounts/signup.html
+++ b/app/accounts/templates/accounts/signup.html
@@ -16,8 +16,6 @@
 </head>
 <body>
 	<!-- main -->
-    
-
 	<div class="wrapper">
         <h1><div class="col-xs-12">
             <div id="logo">
@@ -69,6 +67,7 @@
 						<label><input type="checkbox">Les informations entrées sont-elles valides?</label>
 					</div>
 					<button type="submit" class="btn">Enregistrer</button>
+                    <a href="{% url 'index' %}">Continuer</a>
 					
 					
 					<!--<div class="wthree-text">
