--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
         {% if not user.is_authenticated %}
 
-        <a href="{% url 'signup' %}">S'inscrire</a>
+        <a href="{% url 'index' %}">S'inscrire</a>
 
         {% endif %}
         
