--- a/static/css/styl.css
+++ b/static/css/styl.css
@@ -1,632 +1,117 @@
-@import url();
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Poppins', sans-serif;
+    margin-top: 10px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
+
 body {
-    
-    background: #ffffff;
-    overflow: hidden;
-}
-
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 10%;
-    background: transparent;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    z-index: 100;
-}
-
-.logo {
-    width: 100%;
-    font-size: 32px;
-    color: #fff;
-    text-decoration: none;
-    align-items: center;
-    font-weight: 700;
-    filter: drop-shadow(0 0 5px #09001d);
-}
-
-.navbar a {
-    font-size: 18px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 35px;
-}
-
-.navbar a:hover, 
-.navbar a.active {
-    color: #8d00c4;
-}
-
-.main {
-    
     min-height: 100vh;
-    background: url('sai-i-lama-parallax-01.jpg') no-repeat;
+    background: url('img.jpg') no-repeat;
     background-size: cover;
     background-position: center;
-    pointer-events: auto;
-    transition: .3s ease;
-    width: 100%;
-    padding-bottom: 50%;
-    position: relative;
-}
-
-.main.active {
-    filter: blur(15px);
-    pointer-events: none;
-}
-
-@media screen and (max-width: 1500px) and (min-width: 300px){
-      .header{
-       width: auto;
-      }
-
-      .main{
-        max-width: auto;
-        height: auto;
-        width: 100%;
-        object-fit: cover;
-        position: fixed;
-        
-      }
-      
-      
-}
-
-.container {
-
-    display: flex;
-    height: 100vh;
-    width: 200%;
-
-}
-
-
-.home {
-    position: relative;
-    left: -50%;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;   
-}
-
-.home-content {
-    max-width: 600px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-.home-content h1 {
-    font-size: 78px;
-    font-weight: 700;
-    text-shadow: 2px 2px 2px #c40094;
-    margin-bottom: 50px;
-    color:  #fff;
-    
     
 }
 
-.home-content p {
-    font-size: 16px;
-    text-align: center;
-    text-shadow: 0 0 10px rgba(0, 0, 0, .3);
-    margin-bottom: 50px;
+.wrapper {
+    width: 420px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow:  0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
 }
 
-.home-content .start-btn {
-    width: 190px;
-    height: 55px;
-    background: #c40094;
-    border: 2px solid #fff;
+.wrapper h1 {
+    font-size: 36px;
+    text-align: center;
+}
+
+.wrapper .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    margin: 30px 0;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
     outline: none;
-    border-radius: 6px;
-    box-shadow: 0 0 10px #c40094;
-    font-size: 18px;
-    color: #fff;
-    letter-spacing: 1px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: .5s;
-}
-
-.home-content .start-btn:hover {
-    background: #FFF;
-    color: #c40094;
-    box-shadow: none;
-}
-
-
-
-.popup-info {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(.9);
-    width: 500px;
-    background: #fff;
-    border-radius: 6px;
-    padding: 10px 25px;
-    opacity: 0;
-    pointer-events: none;
-    transition: .3s ease;
-}
-
-.popup-info.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.popup-info h2 {
-    font-size: 50px;
-    color: #c40094;
-    text-align: center;
-}
-.popup-info .info {
-    display: inline-block;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
     font-size: 16px;
-    color: #333;
-    font-weight: 500;
-    margin: 4px 0;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
-.popup-info .btn-group {
+
+.input-box input::placeholder {
+    color: #fff;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    border-top: 1px solid #999;
-    margin-top: 10px;
-    margin: 15px 0 7px;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
 }
-.popup-info .btn-group .info-btn {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 130px;
-    height: 45px;
-    background: #c40094;
-    border: 2px solid #c40094;
-    outline: none;
-    border-radius: 6px;
-    text-decoration: none;
-    font-size: 16px;
+
+.remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
     color: #fff;
-    font-weight: 600;
+    text-decoration: none;
+}
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
-    transition: .5s;
-}
-
-.popup-info .btn-group .info-btn:nth-child(1){
-    background: transparent;
-    color: #c40094;
-}
-
-.popup-info .btn-group .info-btn:nth-child(1):hover{
-    background: #c40094;
-    color: #fff;
-}
-.popup-info .btn-group .info-btn:nth-child(2):hover {
-    background: #fff;
-    border-color: #950170;
-    color: #c40094;
-}
-
-@media screen and (max-width: 800px) and (min-width: 300px){
-    
-    .home-content{
-       width: 200px;  
-    }
-
-    .home-content h1 {
-        font-size: 35px;
-        text-align: center;
-    }
-    .home-content p{
-        font-size: 18px;
-    }
-    .home-content .start-btn:hover {
-        background: #410f34;
-        box-shadow: none;
-    }
-    .popup-info{
-        width: 300px;
-    }
-    .popup-info .info {
-        
-        margin: 5px 0;
-    }
-    .popup-info h2 {
-        font-size: 30px;
-    }
-    .popup-info .btn-group .info-btn {
-        width: 100px;
-    }
-}
-
-.quiz-section {
-    position: relative;
-    
-    display: flex;
-    height: 100vh;
-    
-    /*left: 0%;*/
-    left: -50%;
-    width: 100%;
-    background: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .8s ease-in-out;
-    transition-delay: .25s;
-    z-index: 100;
-}
-
-.quiz-section.active {
-    left: 0;
-}
-
-.quiz-section .quiz-box {
-    position: relative;
-    width: 590px;
-    background: #fff;
-    border: 2px solid #c40094;
-    border-radius: 6px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px 30px;
-    opacity: 0;
-    pointer-events: none;
-    transform: scale(.9);
-    transition: .3s ease;
-    transition-delay: 0s;
-}
-
-.quiz-section .quiz-box.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: scale(1);
-    transition: 1s ease;
-    transition-delay: 1s;
-}
-
-.quiz-box h1 {
-    font-size: 32px;
-    text-align: center;
-    background: linear-gradient(45deg, transparent, #c40094, transparent);
-    border-radius: 6px;
-}
-
-.quiz-box .quiz-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-    border-bottom: 2px solid #c40094;
-    margin-bottom: 30px;
-}
-.quiz-header .timer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 145px;
-    height: 45px;
-    background: #c40094;
-    border: 1px solid #3b032d;
-    border-radius: 5px;
-    padding: 0 8px;
-}
-.quiz-header .timer .time_text{
-    font-weight: 400;
-    font-size: 17px;
-    user-select: none;
-}
-.quiz-header .timer .timer_sec{
-    font-size: 18px;
-    font-weight: 500;
-    background: #343a40;
-    height: 30px;
-    width: 45px;
-    color: #fff;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 5px;
-    border: 1px solid #343a40;
-    user-select: none;
-}
-
-.quiz-header .time_line{
-    position: absolute;
-    bottom: 0px;
-    height: 3px;
-    left: 0px;
-    background: #c40094;
-}
-
-.quiz-header span {
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.quiz-header .head-score {
-    background: #c40094;
-    border-radius: 3px;
-    padding: 7px;
-}
-
-.quiz-box .question-text {
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.option-list .option {
-    width: 100%;
-    padding: 12px;
-    background: transparent;
-    border: 2px solid rgba(10, 10, 10, 0.2);
-    border-radius: 24px;
-    font-size: 17px;
-    margin: 15px 0;
-    cursor: pointer;
-    transition: .3s;
-}
-
-.option-list .option:hover {
-    background: transparent;
-    border-color: #950170;
-}
-
-/*.option-list .option.correct {
-    background: #09001d;
-    color: #410331;
-    border-color: #410331;
-}*/
-
-.option-list .option.selected {
-    background: #09001d;
-    color: transparent;
-    border-color: #950170;
-}
-.option-list .option.disabled {
-    pointer-events: none;
-}
-
-.quiz-box .quiz-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 2px solid #c40094;
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.quiz-footer .question-total {
     font-size: 16px;
+    color: #333;
     font-weight: 600;
 }
 
-.quiz-footer .next-btn {
-    display: flex;
-    width: 100px;
-    height: 45px;
-    background: #950170;
-    border:  2px solid rgba(255, 255, 255, .1);
-    outline: none;
-    border-radius: 6px;
-    font-size: 16px;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
-    /*pointer-events: none;*/
-    transition: .5s;
+.wrapper .register-link {
+    font-size: 14.5px;
+    text-decoration: underline;
+    margin: 20px 0 15px;
 }
 
-.quiz-footer .next-btn.active {
-    pointer-events: auto;
-    background: #c40094;
-    border-color: #c40094;
-    color: #fff;
+.register-link p a:hover {
+    text-decoration: underline;
 }
+  
 
-.quiz-footer .next-btn.active:hover {
-    background: #410331;
-    border-color: #950170;
-}
-
-.quiz-section .result-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(.9);
-    width: 500px;
-    background: #fff;
-    border: 2px solid #c40094;
-    border-radius: 6px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: .3s ease;
-}
-
-.quiz-section .result-box.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.result-box h2 {
-    font-size: 42px;
-    text-align: center;
-}
-
-.result-box .percentage-container {
-    width: 300px;
-    background: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px 0 40px;
-}
-
-.percentage-container .cicular-progress {
-    position: relative;
-    width: 250px;
-    height: 250px;
-    background: conic-gradient(#c40094 3.6deg, rgba(255, 255, 255, .1) 0deg);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.percentage-container .cicular-progress::before {
-    content: '';
-    position: absolute;
-    width: 210px;
-    height: 210px;
-    background: #fff;
-    border:  2px solid rgba(17, 17, 17, 0.1);
-    border-radius: 50%;
-}
-
-.cicular-progress .progress-value {
-    position: relative;
-    font-size: 45px;
-    font-weight: 600;
-}
-
-.percentage-container .score-text {
-    font-size: 26;
-    font-weight: 600;
-    margin-top: 20px;
-    text-align: center;
-}
-
-.result-box .buttons {
-    display: flex;
-}
-
-.buttons button {
-    width: 130px;
-    height: 47px;
-    background: #c40094;
-    border: 2px solid #c40094;
-    outline: none;
-    border-radius: 6px;
-    font-size: 16px;
-    color: #fff;
-    font-weight: 600;
-    margin: 0 20px 20px;
-    cursor: pointer;
-    transition: .5s;
-}
-
-.buttons button:nth-child(1){
-    display: none;
-    background: #c40094;
-    border: 2px solid #c40094;
-    color: #fff; 
-}
-
-.buttons button:nth-child(1):hover {
-    
-    background: #fff;
-    border-color: #c40094;
-    color: #c40094;
-
-}
-.buttons .next-btn {
-    background: transparent;
-    color: #c40094;
-}
-
-.buttons .next-btn:hover {
-    background: #c40094;
-    color: #fff;
-}
-
-
-@media screen and (max-width: 2000px) and (min-width: 300px){
-    .quiz-section{
-        left: -100%;
-        width: 100%;
-
-    }
-    .home{
-        
-        width: 100%;
-
-    }
-}
-
-@media screen and (max-width: 800px) and (min-width: 300px){
-    
-
-    .home-content .start-btn {
-        width: 170px;
-    }
-    .quiz-section{ 
-      width:100%;
-      background: url('sai-i-lama-parallax-01.jpg') no-repeat;  
-      
-    
-    }
-    .quiz-section .quiz-box {
-        width: 100%;
-        border: 2px solid transparent;
-        background: transparent;
-    }
-    .quiz-box h1 {
-        color:#fff;
-    }
-    .quiz-header span {
-        color: #fff;
-    }
-    .quiz-header .timer .time_text{
-        color:#fff;
-    }
-    .quiz-box .question-text {
-        color: #fff;
-    }
-    .quiz-footer .question-total {
-        color: #fff;
-        font-size: 14px;
-        font-weight: 500;
-    }
-    .option-list .option {
-        background: #fff;
-    }
-    .result-box h2 {
-        font-size: 35px;
-        color:#ffffff;
-    }
-    .quiz-section .result-box {
-        border: 2px solid transparent;
-        background: transparent;
-    }
-    .percentage-container .score-text {
-        color: #fff;
-    }
-    .buttons .next-btn {
-        background: #fff;
-        color: #c40094;
-    }
-    
-}  
+/*========================================================================================================*/
+/*=========================================-----DESIGN-RESPONSIVE ------==================================*/
+/*========================================================================================================*/
